light command msgs and test this functionality

--- a/percy_msgs/CMakeLists.txt
+++ b/percy_msgs/CMakeLists.txt
@@ -22,6 +22,8 @@ set(msg_file
 "msg/PercyLightState.msg"
 "msg/PercyRCState.msg"
 "msg/PercyStatus.msg"
+"msg/PercyRgb.msg"
+"msg/PercyRgbCmd.msg"
 )
 
 # set(srv_file
