test sensor feedback, rc feedback and bms feedback

--- a/percy_msgs/CMakeLists.txt
+++ b/percy_msgs/CMakeLists.txt
@@ -25,6 +25,7 @@ set(msg_file
 "msg/PercyRgbCmd.msg"
 "msg/PercyBreakCtl.msg"
 "msg/PercyPowerRailCtl.msg"
+"msg/PercyBmsState.msg"
 )
 
 # set(srv_file
